--- a/app/src/main/res/layout/activity_edit_perfil.xml
+++ b/app/src/main/res/layout/activity_edit_perfil.xml
@@ -178,12 +178,14 @@
             android:id="@+id/linearLayout4"
             android:layout_width="match_parent"
             android:layout_height="52dp"
-            android:layout_marginBottom="140dp"
             android:orientation="horizontal"
+            android:paddingTop="10dp"
             app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.785">
 
             <LinearLayout
                 android:layout_width="80dp"
@@ -210,7 +212,7 @@
                 <Button
                     android:layout_width="200dp"
                     android:layout_height="52dp"
-                    android:layout_gravity="right"
+                    android:layout_gravity="center_vertical|right"
                     android:text="@string/btn_guardar_cambios"
                     android:textColor="@color/white"
                     android:textSize="17sp"
