--- a/app/src/main/res/layout/activity_garaje.xml
+++ b/app/src/main/res/layout/activity_garaje.xml
@@ -12,14 +12,11 @@
         android:layout_width="419dp"
         android:layout_height="200dp"
         android:background="@drawable/rounded_corner_bottom_left"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/textView"
             android:layout_width="183dp"
             android:layout_height="99dp"
             android:layout_marginStart="28dp"
@@ -35,10 +32,11 @@
         </TextView>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="113dp"
-            android:layout_height="41dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="52dp"
+            android:id="@+id/cardView4"
+            android:layout_width="123dp"
+            android:layout_height="47dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="56dp"
             android:backgroundTint="@color/yellow"
             app:cardCornerRadius="50px"
             app:layout_constraintEnd_toEndOf="parent"
@@ -47,9 +45,10 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="11dp"
+                android:padding="14dp"
                 android:text="Seleccionada"
-                android:textSize="14dp"
+                android:textAlignment="center"
+                android:textSize="15dp"
                 android:textStyle="bold">
 
             </TextView>
@@ -59,70 +58,208 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="330dp"
         android:layout_height="399dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="136dp"
+        android:layout_marginTop="76dp"
+        android:layout_marginEnd="116dp"
         android:src="@drawable/moto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="125dp"
-        android:layout_height="101dp"
-        android:layout_marginStart="16dp"
-        android:backgroundTint="@color/yellow"
-        app:cardCornerRadius="20dp"
+
+    <HorizontalScrollView
+        android:id="@+id/horizontalScrollView"
+        android:layout_width="585dp"
+        android:layout_height="107dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
-    </androidx.cardview.widget.CardView>
+        <LinearLayout
+            android:layout_width="500dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="120dp"
-        android:layout_height="103dp"
-        android:backgroundTint="@color/yellow"
-        app:cardCornerRadius="20dp"
-        tools:layout_editor_absoluteX="309dp"
-        tools:layout_editor_absoluteY="479dp">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView"
+                android:layout_width="125dp"
+                android:layout_height="101dp"
+                android:layout_marginHorizontal="15dp"
+                android:backgroundTint="@color/yellow"
+                app:cardCornerRadius="20dp"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="479dp">
 
-    </androidx.cardview.widget.CardView>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView2"
-        android:layout_width="129dp"
-        android:layout_height="102dp"
-        android:layout_marginStart="20dp"
-        android:backgroundTint="@color/yellow"
-        app:cardCornerRadius="20dp"
-        app:layout_constraintStart_toEndOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="125dp"
+                        android:layout_height="37dp"
+                        android:layout_marginTop="16dp"
+                        android:text="411 cc"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="25dp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
-    </androidx.cardview.widget.CardView>
+                    </TextView>
 
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="37dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Cilindraje"
+                        android:textAlignment="center"
+                        android:textSize="20dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+                    </TextView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView3"
+                android:layout_width="120dp"
+                android:layout_height="103dp"
+                android:layout_marginHorizontal="15dp"
+                android:backgroundTint="@color/yellow"
+                app:cardCornerRadius="20dp"
+                tools:layout_editor_absoluteX="309dp"
+                tools:layout_editor_absoluteY="482dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="125dp"
+                        android:layout_height="37dp"
+                        android:layout_marginTop="8dp"
+                        android:text="69"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="25dp"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="37dp"
+                        android:layout_marginBottom="4dp"
+                        android:text="Año"
+                        android:textAlignment="center"
+                        android:textSize="20dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                    </TextView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardView2"
+                android:layout_width="129dp"
+                android:layout_height="105dp"
+                android:layout_marginHorizontal="15dp"
+                android:backgroundTint="@color/yellow"
+                app:cardCornerRadius="20dp"
+                tools:layout_editor_absoluteX="161dp"
+                tools:layout_editor_absoluteY="479dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="125dp"
+                        android:layout_height="37dp"
+                        android:layout_marginTop="16dp"
+                        android:text="2020"
+                        android:textAlignment="center"
+                        android:textColor="@color/black"
+                        android:textSize="25dp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="125dp"
+                        android:layout_height="37dp"
+                        android:layout_marginTop="8dp"
+                        android:text="Año"
+                        android:textAlignment="center"
+                        android:textSize="20dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textView3">
+
+                    </TextView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </androidx.cardview.widget.CardView>
+
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
 
     <Button
+        android:id="@+id/button4"
         android:layout_width="85dp"
         android:layout_height="85dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="13dp"
         android:backgroundTint="@color/white"
-        android:text="<"
+        android:text="a"
         android:textColor="@color/black"
         android:textSize="40dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="601dp"
-        />
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
+        android:id="@+id/button5"
         android:layout_width="202dp"
         android:layout_height="79dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
         android:text="Cambiar Moto"
         android:textSize="20dp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="184dp"
-        tools:layout_editor_absoluteY="601dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="385dp"
+        android:layout_height="71dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/bottombar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"></ImageView>
 </androidx.constraintlayout.widget.ConstraintLayout>
