--- a/app/src/main/res/layout/activity_garaje.xml
+++ b/app/src/main/res/layout/activity_garaje.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/rounded_corner_bottom_left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.125"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
@@ -22,16 +22,14 @@
         <TextView
             android:layout_width="183dp"
             android:layout_height="99dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="24dp"
             android:text="KTM 125 Duke"
             android:textColor="@color/white"
             android:textSize="30dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.067"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.158">
+            app:layout_constraintTop_toTopOf="parent">
 
 
         </TextView>
@@ -65,22 +63,17 @@
         android:id="@+id/imageView"
         android:layout_width="330dp"
         android:layout_height="399dp"
-        android:layout_marginTop="92dp"
-        android:layout_marginEnd="128dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="136dp"
         android:src="@drawable/moto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <HorizontalScrollView
-        android:layout_width="414dp"
-        android:layout_height="96dp"
-        android:layout_marginTop="492dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-        app:layout_constraintVertical_bias="0.0">
-
+        android:layout_width="378dp"
+        android:layout_height="86dp"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="490dp">
 
     </HorizontalScrollView>
 
@@ -93,25 +86,16 @@
         android:textColor="@color/black"
         android:textSize="40dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.138"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.922" />
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="601dp" />
 
     <Button
-        android:id="@+id/button4"
         android:layout_width="202dp"
         android:layout_height="79dp"
         android:text="Cambiar Moto"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.846"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.923" />
+        tools:layout_editor_absoluteX="184dp"
+        tools:layout_editor_absoluteY="601dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
