--- a/app/src/main/res/layout/activity_selectgaraje.xml
+++ b/app/src/main/res/layout/activity_selectgaraje.xml
@@ -44,9 +44,9 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
-        android:layout_width="396dp"
-        android:layout_height="626dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="383dp"
+        android:layout_height="624dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -135,10 +135,10 @@
                 </TextView>
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/textView20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="12dp"
                     android:layout_marginTop="12dp"
                     android:text="KMT 125 Duke"
                     android:textStyle="bold"
@@ -151,11 +151,11 @@
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="36dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="12dp"
                     android:text="Moto en uso"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toEndOf="@+id/imageView2"
+                    app:layout_constraintEnd_toStartOf="@+id/textView21"
                     app:layout_constraintTop_toTopOf="parent">
 
                 </TextView>
@@ -190,26 +190,15 @@
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="44dp"
 
-                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="24dp"
                     android:text="Moto en uso"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5">
+                    app:layout_constraintTop_toBottomOf="@+id/textView21">
 
                 </TextView>
 
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:text="KMT 125 Duke"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5">
-
-                </TextView>
 
                 <TextView
                     android:id="@+id/textView9"
@@ -237,10 +226,10 @@
                 </TextView>
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/textView21"
                     android:layout_width="101dp"
                     android:layout_height="21dp"
-                    android:layout_marginTop="36dp"
+                    android:layout_marginTop="32dp"
                     android:layout_marginEnd="4dp"
                     android:text="KMT 125 Duke"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -251,7 +240,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
