--- a/app/src/main/res/layout/activity_garage.xml
+++ b/app/src/main/res/layout/activity_garage.xml
@@ -49,7 +49,8 @@
                 android:text="Seleccionada"
                 android:textAlignment="center"
                 android:textSize="15dp"
-                android:textStyle="bold">
+                android:textStyle="bold"
+                tools:ignore="TextSizeCheck">
 
             </TextView>
 
