--- a/app/src/main/res/layout/activity_garaje.xml
+++ b/app/src/main/res/layout/activity_garaje.xml
@@ -108,7 +108,7 @@
         android:layout_width="85dp"
         android:layout_height="85dp"
         android:backgroundTint="@color/white"
-        android:text="<"
+        android:text="a"
         android:textColor="@color/black"
         android:textSize="40dp"
         android:textStyle="bold"
