--- a/app/src/main/res/layout/activity_selectgaraje.xml
+++ b/app/src/main/res/layout/activity_selectgaraje.xml
@@ -36,7 +36,7 @@
     <ImageView
         android:layout_width="368dp"
         android:layout_height="62dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/bottombar"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -46,6 +46,7 @@
         android:id="@+id/constraintLayout2"
         android:layout_width="383dp"
         android:layout_height="624dp"
+        android:layout_marginStart="12dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
