--- a/app/src/main/res/layout/activity_edit_perfil.xml
+++ b/app/src/main/res/layout/activity_edit_perfil.xml
@@ -188,6 +188,7 @@
             app:layout_constraintVertical_bias="0.785">
 
             <LinearLayout
+                android:id="@+id/btn_back"
                 android:layout_width="80dp"
                 android:layout_height="46dp"
                 android:layout_gravity="center_vertical"
