--- a/app/src/main/res/layout/activity_garage.xml
+++ b/app/src/main/res/layout/activity_garage.xml
@@ -72,195 +72,110 @@
 
 
     <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="585dp"
-        android:layout_height="107dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
+        android:id="@+id/scrollView"
+        android:layout_width="470dp"
+        android:layout_height="155dp"
+        android:layout_marginBottom="164dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cardView"
+        app:layout_constraintVertical_bias="0.339"
+        tools:ignore="MissingConstraints,SpeakableTextPresentCheck"
+        tools:layout_editor_absoluteX="-5dp">
 
         <LinearLayout
-            android:layout_width="500dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:orientation="horizontal">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView"
-                android:layout_width="125dp"
-                android:layout_height="101dp"
-                android:layout_marginHorizontal="15dp"
-                android:backgroundTint="@color/yellow"
-                app:cardCornerRadius="20dp"
-                tools:layout_editor_absoluteX="16dp"
-                tools:layout_editor_absoluteY="479dp">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/iconoapp" />
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/iconoapp" />
 
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="125dp"
-                        android:layout_height="37dp"
-                        android:layout_marginTop="16dp"
-                        android:text="411 cc"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="25dp"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/iconoapp" />
 
-                    </TextView>
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/iconoapp" />
 
-                    <TextView
-                        android:layout_width="125dp"
-                        android:layout_height="37dp"
-                        android:layout_marginTop="8dp"
-                        android:text="Cilindraje"
-                        android:textAlignment="center"
-                        android:textSize="20dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView2">
-
-                    </TextView>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView3"
-                android:layout_width="120dp"
-                android:layout_height="103dp"
-                android:layout_marginHorizontal="15dp"
-                android:backgroundTint="@color/yellow"
-                app:cardCornerRadius="20dp"
-                tools:layout_editor_absoluteX="309dp"
-                tools:layout_editor_absoluteY="482dp">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="125dp"
-                        android:layout_height="37dp"
-                        android:layout_marginTop="8dp"
-                        android:text="69"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="25dp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                    </TextView>
-
-                    <TextView
-                        android:layout_width="125dp"
-                        android:layout_height="37dp"
-                        android:layout_marginBottom="4dp"
-                        android:text="Año"
-                        android:textAlignment="center"
-                        android:textSize="20dp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-                    </TextView>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cardView2"
-                android:layout_width="129dp"
-                android:layout_height="105dp"
-                android:layout_marginHorizontal="15dp"
-                android:backgroundTint="@color/yellow"
-                app:cardCornerRadius="20dp"
-                tools:layout_editor_absoluteX="161dp"
-                tools:layout_editor_absoluteY="479dp">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="125dp"
-                        android:layout_height="37dp"
-                        android:layout_marginTop="16dp"
-                        android:text="2020"
-                        android:textAlignment="center"
-                        android:textColor="@color/black"
-                        android:textSize="25dp"
-                        android:textStyle="bold"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                    </TextView>
-
-                    <TextView
-                        android:layout_width="125dp"
-                        android:layout_height="37dp"
-                        android:layout_marginTop="8dp"
-                        android:text="Año"
-                        android:textAlignment="center"
-                        android:textSize="20dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/textView3">
-
-                    </TextView>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/iconoapp" />
         </LinearLayout>
-
     </HorizontalScrollView>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_back"
         android:layout_width="85dp"
         android:layout_height="85dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="7dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="@color/white"
-        android:text="a"
+        android:text="@string/btn_back"
         android:textColor="@color/black"
         android:textSize="40dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/btn_editGaraje"
         android:layout_width="202dp"
         android:layout_height="79dp"
-        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:text="Cambiar Moto"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="385dp"
-        android:layout_height="71dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="16dp"
-        android:src="@drawable/bottombar"
+    <LinearLayout
+        android:id="@+id/linearLayout7"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:layout_margin="15dp"
+        android:background="@drawable/background_bottom_navigation"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"></ImageView>
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageView
+            android:id="@+id/btn_home"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/baseline_home_24" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/baseline_notifications_none_24" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/baseline_widgets_24" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
