--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,6 +48,7 @@
             tools:ignore="MissingConstraints" />
 
         <ImageView
+            android:id="@+id/btn_perfilUser"
             android:layout_width="61dp"
             android:layout_height="68dp"
             android:src="@drawable/iconperfil"
@@ -76,6 +77,7 @@
             android:padding="10dp">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/btn_trazarRuta"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_margin="8dp"
@@ -123,6 +125,7 @@
 
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/btn_presupuesto"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_margin="8dp"
@@ -165,6 +168,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/btn_Garaje"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_margin="8dp"
@@ -269,18 +273,34 @@
         </LinearLayout>
     </HorizontalScrollView>
 
-    <androidx.cardview.widget.CardView
-        app:cardCornerRadius="10dp"
-        android:backgroundTint="@color/yellow"
+    <LinearLayout
+        android:layout_margin="20dp"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
+        android:background="@drawable/background_bottom_navigation"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="30dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        tools:layout_editor_absoluteX="-52dp"
-        tools:layout_editor_absoluteY="480dp">
+        app:layout_constraintEnd_toEndOf="parent">
 
-    </androidx.cardview.widget.CardView>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/baseline_home_24" />
 
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/baseline_notifications_none_24" />
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:src="@drawable/baseline_widgets_24" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
