--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,6 +142,7 @@
                     android:text="@string/registrate"/>
 
                 <TextView
+                    android:id="@+id/txt_register"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAlignment="center"
