--- a/app/src/main/res/layout/activity_presupuesto.xml
+++ b/app/src/main/res/layout/activity_presupuesto.xml
@@ -33,6 +33,7 @@
                 android:gravity="left">
 
                 <ImageView
+                    android:id="@+id/btn_back"
                     android:layout_width="50dp"
                     android:layout_height="match_parent"
                     android:src="@drawable/baseline_arrow_back_24"
