--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -156,16 +156,17 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="@string/registrate"
+                                    android:text="@string/txt_tienes_cuenta"
                                     android:textColor="@color/black"
                                     android:textSize="16dp"
                                     android:layout_marginEnd="8dp"
                                     tools:ignore="TextSizeCheck" />
 
                                 <TextView
+                                    android:id="@+id/txt_login"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Registrate"
+                                    android:text="@string/txt_inicia_sesi_n"
                                     android:textColor="@color/yellow"
                                     android:textSize="16dp"
                                     android:textStyle="bold"/>
