--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".RutasActivity">
 
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:background="@color/black"
+        android:src="@drawable/baseline_arrow_back_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
